--- a/src/main/resources/templates/employees/employees.html
+++ b/src/main/resources/templates/employees/employees.html
@@ -16,8 +16,8 @@
     </div>
     <div class="row">
         <div  class="col-12">
-            <table  class="table table-striped table-dark">
-                <thead>
+            <table  class="table table-striped table-bordered table-hover">
+                <thead class="thead-dark">
                 <tr >
                     <th>FirstName</th>
                     <th>LastName</th>
