--- a/src/main/resources/templates/employees/new-employee.html
+++ b/src/main/resources/templates/employees/new-employee.html
@@ -6,13 +6,20 @@
 <nav th:replace="layout :: nav" ></nav>
 <div class="container mt-5">
     <form action="/employees/save" th:object="${employee}" method="POST">
+        <div class="form-group">
+            <label for="name">FirstName</label>
+            <input type="text" th:field="${employee.firstName}" class="form-control" id="name" placeholder="Employee first-name">
+        </div>
+        <div class="form-group">
+            <label for="name">LastName</label>
+            <input type="text" th:field="${employee.lastName}" class="form-control" id="name" placeholder="Employee last-name">
+        </div>
+        <div class="form-group">
+            <label for="name">Email</label>
+            <input type="text" th:field="${employee.email}" class="form-control" id="name" placeholder="Employee email">
+        </div>
 
-        <input type="text" th:field="${employee.firstName}" placeholder="Employee first-name">
-        <input type="text" th:field="${employee.lastName}" placeholder="Employee last-name">
-        <input type="text" th:field="${employee.email}" placeholder="Employee email">
-
-        <button type="submit">Create Employee</button>
-
+        <button type="submit" class="btn btn-primary">Create Employee</button>
     </form>
 </div>
 </body>
