--- a/src/main/resources/templates/projects/projects.html
+++ b/src/main/resources/templates/projects/projects.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
         <div  class="col-12">
-            <table  class="table table-striped table-dark">
+            <table  class="table table-striped table-bordered  table-hover">
                 <thead class="thead-dark">
                 <tr >
                 <th>Name</th>
