Styling home page - Custom queries [IN PROGRESS]

--- a/src/main/resources/templates/employees/employees.html
+++ b/src/main/resources/templates/employees/employees.html
@@ -22,6 +22,7 @@
                     <th>FirstName</th>
                     <th>LastName</th>
                     <th>Email</th>
+                    <th>Status</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -29,6 +30,7 @@
                     <td scope="col" th:text="${emp.firstName}" />
                     <td scope="col" th:text="${emp.lastName}" />
                     <td scope="col" th:text="${emp.email}" />
+                    <td scope="col" th:text="${emp.status}" />
                 </tr>
                 </tbody>
             </table>
