--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -18,7 +18,7 @@
                 <div class="text-left"><h5><a th:href="@{/projects}" style="text-decoration: none;color: black">Employees <span class="badge badge-secondary" th:text="${employeesNumber}"></span></a></h5></div>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><canvas id="myPieChart" height="10" width="10" ></canvas></li>
+                <li class="list-group-item"><canvas id="myPieChartEmployees" height="10" width="10" ></canvas></li>
             </ul>
         </div>
         <div class="col-2 text-center"></div>
@@ -27,7 +27,7 @@
                 <div class="text-left"><h5><a th:href="@{/projects}" style="text-decoration: none;color: black">Projects <span class="badge badge-secondary" th:text="${projectsNumber}"></span></h5></a></div>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><canvas id="myPieChart2" height="10" width="10" ></canvas></li>
+                <li class="list-group-item"><canvas id="myPieChartProjects" height="10" width="10" ></canvas></li>
             </ul>
         </div>    <div class="row mt-5">
         <div class="col-4 text-center">
@@ -40,6 +40,7 @@
 
         </div>
     </div>
+</div>
 </div>
     <script type="text/javascript" th:src="@{/js/myChart.js}" ></script>
 </body>
