--- a/src/main/resources/templates/employees/new-employee.html
+++ b/src/main/resources/templates/employees/new-employee.html
@@ -7,16 +7,16 @@
 <div class="container mt-5">
     <form action="/employees/save" th:object="${employee}" method="POST">
         <div class="form-group">
-            <label for="name">FirstName</label>
-            <input type="text" th:field="${employee.firstName}" class="form-control" id="name" placeholder="Employee first-name">
+            <label for="fname">FirstName</label>
+            <input type="text" th:field="${employee.firstName}" class="form-control" id="fname" placeholder="Employee first-name">
         </div>
         <div class="form-group">
-            <label for="name">LastName</label>
-            <input type="text" th:field="${employee.lastName}" class="form-control" id="name" placeholder="Employee last-name">
+            <label for="lname">LastName</label>
+            <input type="text" th:field="${employee.lastName}" class="form-control" id="lname" placeholder="Employee last-name">
         </div>
         <div class="form-group">
-            <label for="name">Email</label>
-            <input type="text" th:field="${employee.email}" class="form-control" id="name" placeholder="Employee email">
+            <label for="email">Email</label>
+            <input type="text" th:field="${employee.email}" class="form-control" id="email" placeholder="Employee email">
         </div>
         <div class="form-group">
             <label for="stage">Stage</label>
