--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -12,7 +12,7 @@
     </div>
     <div class="row mt-5">
 <!--        <div class="col-5 text-center pb-3" style="background-color: lightgray"><h1>Projects <span class="badge badge-secondary " th:text="${projectsNumber}" ></span></h1><canvas id="myPieChart" height="10" width="10" ></canvas></div>-->
-
+        <div class="col-1 text-center"></div>
         <div class="card col-4" style="width: 18rem;">
             <div class="card-header">
                 <div class="text-left"><h5><a th:href="@{/projects}" style="text-decoration: none;color: black">Employees <span class="badge badge-secondary" th:text="${employeesNumber}"></span></a></h5></div>
@@ -21,7 +21,7 @@
                 <li class="list-group-item"><canvas id="myPieChartEmployees" height="10" width="10" ></canvas></li>
             </ul>
         </div>
-        <div class="col-4 text-center"></div>
+        <div class="col-2 text-center"></div>
         <div class="card col-4" style="width: 18rem;">
             <div class="card-header">
                 <div class="text-left"><h5><a th:href="@{/projects}" style="text-decoration: none;color: black">Projects <span class="badge badge-secondary" th:text="${projectsNumber}"></span></h5></a></div>
@@ -29,7 +29,9 @@
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><canvas id="myPieChartProjects" height="10" width="10" ></canvas></li>
             </ul>
-        </div>    <div class="row mt-5">
+        </div>
+        <div class="col-1 text-center"></div>
+        <div class="row mt-5">
         <div class="col-4 text-center">
 
         </div>
@@ -41,7 +43,33 @@
         </div>
     </div>
 </div>
+<div class="row">
+        <div  class="col-12">
+            <table  class="table table-striped table-bordered  table-hover">
+                <thead class="thead-dark">
+                <tr >
+                    <th>FirstName</th>
+                    <th>LastName</th>
+                    <th>Project Count</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="emp: ${employeesProjectCount}">
+                    <td scope="col" th:text="${emp.firstName}" />
+                    <td scope="col" th:text="${emp.lastName}" />
+                    <td scope="col" th:text="${emp.projectCount}" />
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
 </div>
+    <script>
+        const dataChartPro = "[[${projectsByCountedStage}]]";
+        const dataChartEmp = "[[${EmployeesByCountedStatus}]]";
+    </script>
     <script type="text/javascript" th:src="@{/js/myChart.js}" ></script>
+
 </body>
 </html>
