--- a/src/main/resources/templates/projects/projects.html
+++ b/src/main/resources/templates/projects/projects.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div  class="col-12">
             <table  class="table table-striped table-bordered  table-hover">
-                thead class="thead-dark">
+                <thead class="thead-dark">
                 <tr >
                 <th>Name</th>
                 <th>Stage</th>
