--- a/src/main/resources/templates/employees/new-employee.html
+++ b/src/main/resources/templates/employees/new-employee.html
@@ -5,7 +5,7 @@
 <body>
 <nav th:replace="layout :: nav" ></nav>
 <div class="container mt-5">
-    <form action="/employees/save" th:object="${employee}" method="POST">
+    <form th:action="@{/employees/save}" th:object="${employee}" method="POST">
         <div class="form-group">
             <label for="fname">FirstName</label>
             <input type="text" th:field="${employee.firstName}" class="form-control" id="fname" placeholder="Employee first-name">
