Customize White LabelError Pages [Done] #1

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -38,6 +38,15 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{'/projects'}"  >Projects</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{'/register'}"  >Register User</a>
+            </li>
+            <li class="nav-item ">
+                <!--/*@thymesVar id="userAccount" type="com.pma.app.entities.UserAccount"*/-->
+                <!--/*@thymesVar id="name" type=""*/-->
+<!--                <a class="nav-link" th:href="@{'/register'}" th:text="${userAccount.username}" >Register User</a>-->
+            </li>
+
         </ul>
         <!--        <form class="form-inline my-2 my-lg-0">-->
         <!--            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
