--- a/src/main/resources/templates/employees/new-employee.html
+++ b/src/main/resources/templates/employees/new-employee.html
@@ -9,22 +9,27 @@
         <div class="form-group">
             <label for="fname">FirstName</label>
             <input type="text" th:field="${employee.firstName}" class="form-control" id="fname" placeholder="Employee first-name">
+            <td th:if="${#fields.hasErrors('firstName')}" th:errors="${employee.firstName}">firstName Error</td>
         </div>
         <div class="form-group">
             <label for="lname">LastName</label>
             <input type="text" th:field="${employee.lastName}" class="form-control" id="lname" placeholder="Employee last-name">
+            <td th:if="${#fields.hasErrors('lastName')}" th:errors="${employee.lastName}">lastName Error</td>
         </div>
         <div class="form-group">
             <label for="email">Email</label>
             <input type="text" th:field="${employee.email}" class="form-control" id="email" placeholder="Employee email">
+            <td th:if="${#fields.hasErrors('email')}" th:errors="${employee.email}">Email Error</td>
         </div>
         <div class="form-group">
             <label for="stage">Stage</label>
-            <select class="form-control" id="stage" th:field="${employee.status}">
-                <option th:value="SENIOR"> Senior</option>
+            <select class="form-control" id="status" th:field="${employee.status}">
+                <option value="" >Selectionnez un status</option>
                 <option th:value="JUNIOR"> Junior</option>
+                <option th:value="SENIOR"> Senior</option>
                 <option th:value="INTERMEDIARY"> Intermediary</option>
             </select>
+            <td th:if="${#fields.hasErrors('status')}" th:errors="${employee.status}">Status Error</td>
         </div>
 
         <button type="submit" class="btn btn-primary">Create Employee</button>
