--- a/src/main/resources/templates/employees/employees.html
+++ b/src/main/resources/templates/employees/employees.html
@@ -19,10 +19,11 @@
             <table  class="table table-striped table-bordered table-hover">
                 <thead class="thead-dark">
                 <tr >
-                    <th>FirstName</th>
-                    <th>LastName</th>
-                    <th>Email</th>
-                    <th>Status</th>
+                    <th class="text-center">FirstName</th>
+                    <th class="text-center">LastName</th>
+                    <th class="text-center">Email</th>
+                    <th class="text-center">Status</th>
+                    <th class="text-center">Actions</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -31,6 +32,12 @@
                     <td scope="col" th:text="${emp.lastName}" />
                     <td scope="col" th:text="${emp.email}" />
                     <td scope="col" th:text="${emp.status}" />
+                    <td class="text-center" scope="col">
+                        <a  class="btn btn-info btn-sm" th:href="@{/employees/update(id=${emp.employee_id})}"
+                        >Update</a>
+                        <a  class="ml-2 btn btn-danger btn-sm" th:href="@{/employees/delete(id=${emp.employee_id})}"
+                           onclick="if (!(confirm('Are you sure you want to delete that employee ?'))) return false">Delete</a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
