--- a/src/main/resources/templates/employees/new-employee.html
+++ b/src/main/resources/templates/employees/new-employee.html
@@ -13,27 +13,27 @@
 
             <label for="fname">FirstName</label>
             <input type="text" th:field="${employee.firstName}" class="form-control" id="fname" placeholder="Employee first-name">
-            <span th:if="${#fields.hasErrors('firstName')}" th:errors="${employee.firstName}"></span>
+            <span style="color: darkred" th:if="${#fields.hasErrors('firstName')}" th:errors="${employee.firstName}"></span>
         </div>
         <div class="form-group">
             <label for="lname">LastName</label>
             <input type="text" th:field="${employee.lastName}" class="form-control" id="lname" placeholder="Employee last-name">
-            <span th:if="${#fields.hasErrors('lastName')}" th:errors="${employee.lastName}"></span>
+            <span style="color: darkred" th:if="${#fields.hasErrors('lastName')}" th:errors="${employee.lastName}"></span>
         </div>
         <div class="form-group">
             <label for="email">Email</label>
             <input type="text" th:field="${employee.email}" class="form-control" id="email" placeholder="Employee email">
-            <span th:if="${#fields.hasErrors('email')}" th:errors="${employee.email}"></span>
+            <span style="color: darkred" th:if="${#fields.hasErrors('email')}" th:errors="${employee.email}"></span>
         </div>
         <div class="form-group">
-            <label for="stage">Stage</label>
+            <label for="status">Status</label>
             <select class="form-control" id="status" th:field="${employee.status}">
                 <option value="" >Selectionnez un status</option>
                 <option th:value="JUNIOR"> Junior</option>
                 <option th:value="SENIOR"> Senior</option>
                 <option th:value="INTERMEDIARY"> Intermediary</option>
             </select>
-            <span th:if="${#fields.hasErrors('status')}" th:errors="${employee.status}"></span>
+            <span style="color: darkred" th:if="${#fields.hasErrors('status')}" th:errors="${employee.status}"></span>
         </div>
 
         <button type="submit" class="btn btn-primary">Create Employee</button>
